[gd_scene load_steps=2 format=3 uid="uid://boxjxqjn2h2gb"]

[ext_resource type="Script" path="res://scenes/bullets/generic_bullet.gd" id="1_nppcw"]

[node name="GenericBullet" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_nppcw")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.12, 0.12)

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="SmoothDeathTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
[connection signal="timeout" from="SmoothDeathTimer" to="." method="_on_smooth_death_timer_timeout"]
